; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_do_change_disk_status.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_do_change_disk_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.cache_packed_local_copy_location = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }
%struct.lev_cache_change_disk_status = type { i32 }

@LEV_CACHE_CHANGE_DISK_STATUS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cache_do_change_disk_status(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %union.cache_packed_local_copy_location, align 4
  %12 = alloca %struct.lev_cache_change_disk_status*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %18, label %15

15:                                               ; preds = %4
  %16 = load i32, i32* %9, align 4
  %17 = icmp eq i32 %16, 1
  br label %18

18:                                               ; preds = %15, %4
  %19 = phi i1 [ true, %4 ], [ %17, %15 ]
  %20 = zext i1 %19 to i32
  %21 = call i32 @assert(i32 %20)
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @cache_is_valid_disk(i32 %22, i32 %23, i32 %24)
  store i32 %25, i32* %10, align 4
  %26 = load i32, i32* %10, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %18
  %29 = load i32, i32* %10, align 4
  store i32 %29, i32* %5, align 4
  br label %50

30:                                               ; preds = %18
  %31 = load i32, i32* %6, align 4
  %32 = bitcast %union.cache_packed_local_copy_location* %11 to %struct.TYPE_2__*
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 4
  %34 = load i32, i32* %7, align 4
  %35 = bitcast %union.cache_packed_local_copy_location* %11 to %struct.TYPE_2__*
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 1
  store i32 %34, i32* %36, align 4
  %37 = load i32, i32* %8, align 4
  %38 = bitcast %union.cache_packed_local_copy_location* %11 to %struct.TYPE_2__*
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 2
  store i32 %37, i32* %39, align 4
  %40 = load i64, i64* @LEV_CACHE_CHANGE_DISK_STATUS, align 8
  %41 = load i32, i32* %9, align 4
  %42 = sext i32 %41 to i64
  %43 = add nsw i64 %40, %42
  %44 = bitcast %union.cache_packed_local_copy_location* %11 to i32*
  %45 = load i32, i32* %44, align 4
  %46 = call %struct.lev_cache_change_disk_status* @alloc_log_event(i64 %43, i32 4, i32 %45)
  store %struct.lev_cache_change_disk_status* %46, %struct.lev_cache_change_disk_status** %12, align 8
  %47 = load %struct.lev_cache_change_disk_status*, %struct.lev_cache_change_disk_status** %12, align 8
  %48 = load i32, i32* %9, align 4
  %49 = call i32 @cache_change_disk_status(%struct.lev_cache_change_disk_status* %47, i32 %48)
  store i32 %49, i32* %5, align 4
  br label %50

50:                                               ; preds = %30, %28
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @cache_is_valid_disk(i32, i32, i32) #1

declare dso_local %struct.lev_cache_change_disk_status* @alloc_log_event(i64, i32, i32) #1

declare dso_local i32 @cache_change_disk_status(%struct.lev_cache_change_disk_status*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
